--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
     </div>
 
     <script src="script.js"></script>
-
-    <!--Enlazar el login script-->
     <script src="login.js"></script>
+    <script src="fix-user-data.js"></script>
   </body>
 </html>
